Codebase cleanup, removed RowMapperFactory, injected each Mapper into the respective SqlRepo, removed unused loggers